# ChangeLog for virtual/perl-Module-Build
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Module-Build/ChangeLog,v 1.8 2009/03/13 21:18:28 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org>
  -perl-Module-Build-0.28-r1.ebuild, -perl-Module-Build-0.30.ebuild,
  -perl-Module-Build-0.31.ebuild, -perl-Module-Build-0.31.012.ebuild:
  Cleanup

*perl-Module-Build-0.32 (26 Feb 2009)

  26 Feb 2009; Torsten Veller <tove@gentoo.org>
  +perl-Module-Build-0.32.ebuild:
  Version bump

*perl-Module-Build-0.31.012 (14 Jan 2009)

  14 Jan 2009; Torsten Veller <tove@gentoo.org>
  -perl-Module-Build-0.31.011.ebuild, +perl-Module-Build-0.31.012.ebuild:
  Version bump. Cleanup

*perl-Module-Build-0.31.011 (13 Jan 2009)

  13 Jan 2009; Torsten Veller <tove@gentoo.org>
  +perl-Module-Build-0.31.011.ebuild, -perl-Module-Build-0.31011.ebuild:
  Rename version: 0.31011 -> 0.31.011

*perl-Module-Build-0.31011 (13 Jan 2009)

  13 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  +perl-Module-Build-0.31011.ebuild:
  Version bump via perl-bump experimental tool.

*perl-Module-Build-0.31 (23 Dec 2008)

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +perl-Module-Build-0.31.ebuild:
  Version bump.

*perl-Module-Build-0.30 (01 Nov 2008)
*perl-Module-Build-0.28.08 (01 Nov 2008)
*perl-Module-Build-0.28-r1 (01 Nov 2008)

  01 Nov 2008; Yuval Yaari <yuval@gentoo.org> +metadata.xml,
  +perl-Module-Build-0.28-r1.ebuild, +perl-Module-Build-0.28.08.ebuild,
  +perl-Module-Build-0.30.ebuild:
  Adding virtuals for dual-lifed modules that come with perl-5.10
