@@ -1,6 +1,4 @@
-EBUILD perl-Module-Build-0.30.ebuild 542 RMD160 a929b10680aa046f0cbce8c83410550205fd683c SHA1 070b7aa7808aacc4e88b7091c7dd98e002d8280e SHA256 a267a044efcf871d28c3d9b8e01e4af2e0728c56c8a9b65750e8551c969ed5bd
-EBUILD perl-Module-Build-0.31.012.ebuild 581 RMD160 15f0ef60324d89687cd040eb0c9a4a86784f9bdb SHA1 ad68619e68b374ab2f7f1ede9bbb533d7dff9be5 SHA256 14f8001c27ef64127b408f1876f8ac60a58323a8d1e29c39b0d7434ca7bdc644
-EBUILD perl-Module-Build-0.31.ebuild 556 RMD160 afed014814299809bd3380e960b9cb9ebd791321 SHA1 fcfd707ae5de54e306a593f7b69e843777e044b2 SHA256 1c786fd90a34a94e05beb95a6f60e387b45f8b8b4244e31160a88daa99b46f4a
 EBUILD perl-Module-Build-0.32.ebuild 577 RMD160 115f6d9cc8f226b2a5bbe1617cf3169e09dd7ef7 SHA1 d3801c299a40f553d916e86f4b5434a380589daa SHA256 ad7814ea65fdf941f48ddc70ce08a235bfe4f98004946d4e15519c4f50e626be
-MISC ChangeLog 1628 RMD160 f98601d1297bf0160e30560649c25c7029963b77 SHA1 58592351175641abb8f7a6bd955b449f6fc0a2cb SHA256 fa44acc3d9e1095364247209271c2c8632b504e17452969b7812d38672b08b6f
+EBUILD perl-Module-Build-0.33.ebuild 577 RMD160 9bcabcbe08e47af0c1a52430e0687d09e0826754 SHA1 2173e3868d49562c73ba51c117582a905393777d SHA256 023cb18b08da80e65b03e62d1ee046af93279874b369a30ab781c18177861178
+MISC ChangeLog 1765 RMD160 9186cffa52a93e19f59b447fb40bfcc4f349702c SHA1 db53329149f6a96c6aaabf750c5099cdd5157ddf SHA256 8ba58d829b46f58dd8cdbab1becb90ba655ae511e0c6c3043895dbe4589c8201
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
