@@ -1,16 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Module-Build/perl-Module-Build-0.30.ebuild,v 1.3 2008/11/04 17:24:26 tove Exp $
-
-DESCRIPTION="Build and install Perl modules"
-HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
-SRC_URI=""
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-
-IUSE=""
-DEPEND=""
-
-RDEPEND="~perl-core/Module-Build-${PV}"
