@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Module-Build
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Module-Build/ChangeLog,v 1.8 2009/03/13 21:18:28 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Module-Build/ChangeLog,v 1.9 2009/05/04 09:50:28 tove Exp $
+
+*perl-Module-Build-0.33 (04 May 2009)
+
+  04 May 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Module-Build-0.33.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org>
   -perl-Module-Build-0.28-r1.ebuild, -perl-Module-Build-0.30.ebuild,
